--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -232,6 +232,22 @@
       "apply": "Anwenden",
       "taxes": "Steuern"
     },
+    "confirmCryptoPayment": {
+      "title": "Zahlung bestätigen",
+      "timeExpiration": "Die Rechnung läuft in 20 Minuten ab",
+      "expiredLabel": "ABGELAUFEN",
+      "total": "Gesamt",
+      "copyAddress": "Adresse kopieren",
+      "doNotCloseWindowWarning": "Dieses Fenster sollte nicht geschlossen werden, bis Sie die Zahlung bestätigen",
+      "cancel": "Abbrechen",
+      "confirm": "Zahlung bestätigen",
+      "sessionExpired": "Sitzung Abgelaufen",
+      "notifications": {
+        "paymentSucceeded": "Zahlung erfolgreich abgeschlossen",
+        "paymentNotCompleted": "Zahlung ist nicht abgeschlossen",
+        "unexpectedError": "Bei der Überprüfung der Zahlung ist ein Fehler aufgetreten"
+      }
+    },
     "error": {
       "invalidPlan": "Nicht unterstützter Plantyp. Bitte wählen Sie einen gültigen Plan.",
       "fetchingCryptoCurrencies": "Die verfügbaren Kryptowährungsoptionen konnten nicht geladen werden"
