--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -251,7 +251,7 @@
       "expiredLabel": "已过期",
       "total": "总计",
       "copyAddress": "复制地址",
-      "doNotCloseWindowWarning": "在您确认付款之前，请勿关闭此窗口",
+      "doNotCloseWindowWarning": "在付款完成之前请勿关闭窗口",
       "cancel": "取消",
       "confirm": "确认付款",
       "sessionExpired": "会话已过期",
