feat: add amount in fiat currency in Crypto dialog

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -259,8 +259,9 @@
       "title": "Confirm the payment",
       "timeExpiration": "The invoice will expire in 10 minutes",
       "expiredLabel": "EXPIRED",
-      "total": "Total",
-      "copyAddress": "Copy the address",
+      "totalInCrypto": "Payment amount ({{cryptoCurrency}})",
+      "totalInFiat": "Amount",
+      "copyAddress": "Payment address",
       "doNotCloseWindowWarning": "Don't close the window until the payment is done",
       "cancel": "Cancel",
       "confirm": "Confirm the payment",
