--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -240,8 +240,9 @@
       "title": "Confirmar el pago",
       "timeExpiration": "La factura expirará en 10 minutos",
       "expiredLabel": "EXPIRADO",
-      "total": "Total",
-      "copyAddress": "Copiar la dirección",
+      "totalInCrypto": "Cantidad a pagar ({{cryptoCurrency}})",
+      "totalInFiat": "Importe",
+      "copyAddress": "Dirección de pago",
       "doNotCloseWindowWarning": "No cierres la ventana hasta que el pago esté completado",
       "cancel": "Cancelar",
       "confirm": "Confirmar el pago",
