--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -242,8 +242,9 @@
       "title": "Confirmer le paiement",
       "timeExpiration": "La facture expirera dans 10 minutes",
       "expiredLabel": "EXPIRÉ",
-      "total": "Total",
-      "copyAddress": "Copier l'adresse",
+      "totalInCrypto": "Montant à payer ({{cryptoCurrency}})",
+      "totalInFiat": "Montant",
+      "copyAddress": "Adresse de paiement",
       "doNotCloseWindowWarning": "Ne fermez pas la fenêtre tant que le paiement n'est pas terminé",
       "cancel": "Annuler",
       "confirm": "Confirmer le paiement",
