--- a/src/app/i18n/locales/it.json
+++ b/src/app/i18n/locales/it.json
@@ -334,8 +334,9 @@
       "title": "Conferma il pagamento",
       "timeExpiration": "La fattura scadrà tra 10 minuti",
       "expiredLabel": "SCADUTO",
-      "total": "Totale",
-      "copyAddress": "Copia l'indirizzo",
+      "totalInCrypto": "Importo da pagare ({{cryptoCurrency}})",
+      "totalInFiat": "Importo",
+      "copyAddress": "Indirizzo di pagamento",
       "doNotCloseWindowWarning": "Non chiudere la finestra finché il pagamento non è completato",
       "cancel": "Annulla",
       "confirm": "Conferma il pagamento",
