--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -242,8 +242,9 @@
       "title": "Подтвердить платеж",
       "timeExpiration": "Счет истечет через 10 минут",
       "expiredLabel": "ИСТЁК",
-      "total": "Итого",
-      "copyAddress": "Скопировать адрес",
+      "totalInCrypto": "Сумма к оплате ({{cryptoCurrency}})",
+      "totalInFiat": "Сумма",
+      "copyAddress": "Адрес платежа",
       "doNotCloseWindowWarning": "Не закрывайте окно, пока платеж не будет завершен",
       "cancel": "Отмена",
       "confirm": "Подтвердить платеж",
