--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -251,8 +251,9 @@
       "title": "確認付款",
       "timeExpiration": "發票將在10分鐘後過期",
       "expiredLabel": "已過期",
-      "total": "總計",
-      "copyAddress": "複製地址",
+      "totalInCrypto": "付款金額 ({{cryptoCurrency}})",
+      "totalInFiat": "金額",
+      "copyAddress": "付款地址",
       "doNotCloseWindowWarning": "在付款完成之前請勿關閉視窗",
       "cancel": "取消",
       "confirm": "確認付款",
