--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -249,8 +249,9 @@
       "title": "确认付款",
       "timeExpiration": "发票将在10分钟后过期",
       "expiredLabel": "已过期",
-      "total": "总计",
-      "copyAddress": "复制地址",
+      "totalInCrypto": "付款金额 ({{cryptoCurrency}})",
+      "totalInFiat": "金额",
+      "copyAddress": "付款地址",
       "doNotCloseWindowWarning": "在付款完成之前请勿关闭窗口",
       "cancel": "取消",
       "confirm": "确认付款",
