--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -236,8 +236,9 @@
       "title": "Zahlung bestätigen",
       "timeExpiration": "Die Rechnung läuft in 10 Minuten ab",
       "expiredLabel": "ABGELAUFEN",
-      "total": "Gesamt",
-      "copyAddress": "Adresse kopieren",
+      "totalInCrypto": "Zahlbetrag ({{cryptoCurrency}})",
+      "totalInFiat": "Betrag",
+      "copyAddress": "Zahlungsadresse",
       "doNotCloseWindowWarning": "Schließen Sie das Fenster nicht, bis die Zahlung abgeschlossen ist",
       "cancel": "Abbrechen",
       "confirm": "Zahlung bestätigen",
