--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -9,21 +9,23 @@
     "cta": "Получить скидку"
   },
   "featuresBanner": {
-    "label": "Скидка 85%",
-    "title": "На все тарифы",
-    "upperTitle": "Нам 5 лет!",
-    "cta": "Выбрать план",
-    "guarantee": "30 дней гарантия возврата",
-    "specialOfferGift": "Розыгрыш футболки с автогр. Valencia CF",
-    "lastCta": "*Предложение для новых или бесплатных аккаунтов",
-    "features": [
-      "Диск, VPN и Антивирус",
-      "Экологичное хранилище",
-      "Постквантовое шифрование",
-      "Зашифрованные передачи",
-      "Без несанкционир. доступа",
-      "Летняя тема бесплатно"
-    ]
+    "label": {"blueText":"Получите скидку 87%", "text":"на все Premium планы"},
+    "title": "Получите эксклюзивную скидку!",
+    "subTitle": {
+      "blueText":"Специальное предложение:",
+      "text":"храните файлы конфиденциально за меньшие деньги"
+    },
+    "ctaGet": "Получить предложение",
+    "ctaContinue":"Продолжить бесплатно",
+    "guarantee": "30-дневная гарантия возврата денег",
+    "products": {
+      "drive": "Drive",
+      "antivirus": "Antivirus",
+      "cleaner": "Cleaner",
+      "vpn": "VPN",
+      "meet": "Meet",
+      "mail": "Mail"
+    }
   },
   "susbcriptionsBanner": {
     "title": "Улучшите свой план!",
