--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -4,16 +4,25 @@
     "logOut": "登出"
   },
   "featuresBanner": {
-    "label": "立省 85%",
-    "title": "適用於所有方案",
-    "upperTitle": "我們滿 5 歲了！",
-    "cta": "選擇你的方案",
-    "guarantee": "30 天退款保證",
-    "specialOfferGift": "瓦倫西亞 CF 球衣抽獎",
-    "lastCta": "*僅限免費帳戶或新用戶",
-    "features": ["Drive、VPN 和防毒", "永續雲端儲存", "後量子加密", "端對端加密傳輸", "無未授權存取", "免費夏季主題"]
+    "label": {"blueText":"獲得87%折扣", "text":"所有高級方案"},
+    "title": "獲得專屬折扣！",
+    "subTitle": {
+      "blueText":"特別優惠：",
+      "text":"以更低價格私密儲存檔案"
+    },
+    "ctaGet": "獲取優惠",
+    "ctaContinue":"免費繼續",
+    "guarantee": "30天退款保證",
+    "products": {
+      "drive": "Drive",
+      "antivirus": "Antivirus",
+      "cleaner": "Cleaner",
+      "vpn": "VPN",
+      "meet": "Meet",
+      "mail": "Mail"
+    }
   },
-  "susbcriptionsBanner": {
+    "susbcriptionsBanner": {
     "title": "升級您的計畫！",
     "features": ["後量子加密", "雲端硬碟、VPN 和防毒軟體", "即將推出郵件和會議"],
     "description": "續訂您的訂閱，即可享受我們的新功能！",
